changed contrast issues

--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,7 @@ h4{
     font-size: 23px;
     background-color: #c33a19;
     text-align: center;
+    color: #ffffff
 }
 body{
     background-color: #f9a690;
